--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,27 @@
 
 }
 
+.topnav a {
+ 
+  display: block;
+  text-align: center;
+  padding: 6px 6px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+.topnav .icon {
+  display: none;
+}
+
 .App-link {
   color: #09d3ac;
 }
