--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ text-align: center;
 
   padding-top: 60px;
   font-family: 'Times New Roman', Times, serif;
-  color: cornflowerblue;
+  color: black;
   
 }
 
@@ -104,6 +104,7 @@ text-align: center;
 .p {
   color: black;
   font-family: 'Times New Roman', Times, serif;
+  word-wrap: break-word
 }
 .img {
   margin-right:10px;
@@ -144,3 +145,54 @@ text-align: center;
   flex-direction: column;
   justify-content: center;
 }
+
+.i {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.about-bio{
+
+  padding-top: 150px;
+  padding-left: 50px;
+
+}
+.contact-h3{
+
+  padding-top: 80px;
+  padding-bottom: 30px;
+  font-family: 'Times New Roman', Times, serif;
+
+}
+
+.fN {
+
+  padding-left: 100px;
+  padding-bottom: 10px;
+}
+.first {
+
+  padding-left: 10px;
+  padding-right: 33px;
+}
+.first1 {
+
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.f {
+
+  padding-left: 110px;
+  padding-bottom: 10px;
+}
+
+.mess {
+
+  padding-right: 43px;
+}
+
+.but {
+
+  float: right;
+}
+
