--- a/src/App.css
+++ b/src/App.css
@@ -98,8 +98,8 @@ text-align: center;
 }
 .heading-1 {
   font-family: 'Times New Roman', Times, serif;
-  color: #09d3ac;
-  padding-left: 700px;
+  color: black;
+  padding-top: 100px;
 }
 .p {
   color: black;
@@ -195,4 +195,168 @@ text-align: center;
 
   float: right;
 }
+
+
+
+.etitle {
+    text-align: center;
+    margin-bottom: 2em;
+  }
+
+  .h4-deg {
+		font-weight: normal;
+	}
+
+	.degree {
+		margin-bottom: .1em;
+		letter-spacing: 0.16em;
+    font-size: .8em;
+    text-align: left;
+    
+	}
+
+	.school {
+		text-transform: none;
+		padding-top: 0.3em;
+    margin-bottom: 1em;
+    text-align: left;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
+  .timeline {
+
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .timeline::after {
+    content: '';
+    position: relative;
+    width: 6px;
+    background-color: black;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+  }
+  .daterange {
+    margin-bottom: .2em;
+    text-align: start;
+    font-style: italic;
+    font-size: .7em;
+  }
+  .points {
+      margin: 0;
+      padding: 0;
+      font-size: .9em;
+      text-align: left;
+      font-family: 'Times New Roman', Times, serif;
+  }
+  .headers{
+
+    font-family: 'Times New Roman', Times, serif;
+  }
+  .skills .title {
+    text-align: center;
+  }
+  
+  .skill-button-container {
+    margin: 1.5em 0;
+    text-align: center;
+  }
+  
+  .skillbutton {
+    box-shadow: none;
+    outline: none
+  }
+  
+  .skillbutton-active {
+    box-shadow: inset 0 0 0 1px _palette(accent);
+    color: _palette(accent) !important;
+  }
+  
+  .skillbar {
+    position:relative;
+    display:block;
+    margin-bottom:15px;
+    width:100%;
+    background:#eee;
+    height:35px;
+    border-radius:3px;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    -webkit-transition:0.4s linear;
+    -moz-transition:0.4s linear;
+    -ms-transition:0.4s linear;
+    -o-transition:0.4s linear;
+    transition:0.4s linear;
+    -webkit-transition-property:width, background-color;
+    -moz-transition-property:width, background-color;
+    -ms-transition-property:width, background-color;
+    -o-transition-property:width, background-color;
+    transition-property:width, background-color;
+  }
+  
+  
+  .skillbar-title {
+    position:absolute;
+    top:0;
+    left:0;
+    font-weight:bold;
+    font-size:13px;
+    color:#fff;
+    background:#6adcfa;
+    -webkit-border-top-left-radius:3px;
+    -webkit-border-bottom-left-radius:4px;
+    -moz-border-radius-topleft:3px;
+    -moz-border-radius-bottomleft:3px;
+    border-top-left-radius:3px;
+    border-bottom-left-radius:3px;
+  }
+  
+  .skillbar-title span {
+    display:block;
+    background:rgba(0, 0, 0, 0.1);
+    padding:0 20px;
+    height:35px;
+    line-height:35px;
+    -webkit-border-top-left-radius:3px;
+    -webkit-border-bottom-left-radius:3px;
+    -moz-border-radius-topleft:3px;
+    -moz-border-radius-bottomleft:3px;
+    border-top-left-radius:3px;
+    border-bottom-left-radius:3px;
+  }
+  
+  .skillbar-bar {
+    height:35px;
+    width:0px;
+    background:#6adcfa;
+    border-radius:3px;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+  }
+  
+  .skill-bar-percent {
+    position:absolute;
+    right:10px;
+    top:0;
+    font-size:11px;
+    height:35px;
+    line-height:35px;
+    color:#444;
+    color:rgba(0, 0, 0, 0.4);
+  }
+  .skills {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+  }
+  
+  .html {width: 90%; background-color: #4CAF50;}
+  .css {width: 80%; background-color: #2196F3;}
+  .js {width: 65%; background-color: #f44336;}
+  .php {width: 60%; background-color: #808080;}  
+
 
