--- a/src/App.css
+++ b/src/App.css
@@ -262,8 +262,66 @@ text-align: center;
 
     font-family: 'Times New Roman', Times, serif;
   }
+  
+  .header-a{
+
+    font-family: 'Times New Roman', Times, serif;
+    color: white;
+  }
+
+  .about-image{
+
+    padding-top: 100px;
+    padding-left: 80px;
+    width: 600px;
+  }
+  .about-h3{
+
+    padding-top: 120px;
+    padding-left: 120px;
+  }
+  .about {
+
+    background-color: gainsboro;
+  }
+
+  .some-page-wrapper {
+    margin: 15px;
+    padding-top: 120px;
+
+  }
+  
+  .rows {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  
+  .columns {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    padding-left: 80px;
+    padding-right: 20px;
+  }
+  .para{
+
+    padding-top: 10px;
+    font-family: 'Times New Roman', Times, serif;
+
+  }
+  .parag{
+
+    padding-top: 50px;
+    font-family: 'Times New Roman', Times, serif;
+  }
+
   .skills .title {
     text-align: center;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
   }
   
   .skill-button-container {
@@ -272,12 +330,19 @@ text-align: center;
   }
   
   .skillbutton {
-    box-shadow: none;
-    outline: none
+    background-color: white;
+   color: black;
+    border: 2px solid #e7e7e7;
+    margin-left: 3px;
+    
   }
+  .skillbutton:hover{
+    box-shadow: inset 0 0 0 1px _palette(accent);
+    color: blue;
+}
   
   .skillbutton-active {
-    box-shadow: inset 0 0 0 1px _palette(accent);
+    box-shadow: blue;
     color: _palette(accent) !important;
   }
   
@@ -353,70 +418,75 @@ text-align: center;
     color:#444;
     color:rgba(0, 0, 0, 0.4);
   }
-  .skills {
-    text-align: right;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: white;
-  }
+  .button {
+	
+		background-color: transparent;
+		border: 0;
+		box-shadow: inset 0 0 0 1px _palette(border);
+		color: _palette(fg-bold) !important;
+		cursor: pointer;
+		display: inline-block;
+		font-family: _font(family-heading);
+		font-size: 0.6em;
+		font-weight: _font(weight-heading-bold);
+		height: _size(element-height) * 1.75;
+		letter-spacing: _font(kerning-heading);
+		line-height: _size(element-height) * 1.75;
+		padding: 0 2.5em;
+		text-align: center;
+		text-decoration: none;
+		text-transform: uppercase;
+		white-space: nowrap;
+  }  
   
-  .html {width: 90%; background-color: #4CAF50;}
-  .css {width: 80%; background-color: #2196F3;}
-  .js {width: 65%; background-color: #f44336;}
-  .php {width: 60%; background-color: #808080;}
-  
-  .header-a{
-
-    font-family: 'Times New Roman', Times, serif;
-    color: white;
+  .button:hover{
+			box-shadow: inset 0 0 0 1px _palette(accent);
+			color: _palette(accent) !important;
   }
 
-  .about-image{
-
-    padding-top: 100px;
-    padding-left: 80px;
-    width: 600px;
-  }
-  .about-h3{
-
-    padding-top: 120px;
-    padding-left: 120px;
-  }
-  .about {
-
-    background-color: gainsboro;
+  .nutton:before:after {
+    color: _palette(fg-light);
+    position: relative;
   }
 
-  .some-page-wrapper {
-    margin: 15px;
-    padding-top: 120px;
-
+  .button:before {
+    left: -1em;
+    padding: 0 0 0 0.75em;
   }
-  
-  .rows {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+
+  .button:after {
+    left: 1em;
+    padding: 0 0.75em 0 0;
+  }
+
+  .button.fit {
+    display: block;
+    margin: 0 0 (_size(element-margin) * 0.5) 0;
     width: 100%;
   }
-  
-  .columns {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
-    padding-left: 80px;
-    padding-right: 20px;
-  }
-  .para{
 
-    padding-top: 10px;
-    font-family: 'Times New Roman', Times, serif;
-
-  }
-  .parag{
-
-    padding-top: 50px;
-    font-family: 'Times New Roman', Times, serif;
+  .button.big {
+    font-size: 0.7em;
+    padding: 0 3em;
   }
 
+  .button.small {
+    font-size: 0.5em;
+  }
+
+  .button.disabled,
+  .button:disabled {
+
+    color: _palette(border) !important;
+  }
+
+  .button:before {
+      color: _palette(border) !important;
+  }
+
+  .link-container{
+		text-decoration:none;
+    border-bottom: none;
+    padding-left: 5px;
+		display: inline-flex;
+	}
