--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,9 @@ text-align: center;
   color: white;
 }
 
+
+
+
 .blog-h {
 
   padding-top:50px ;
@@ -50,6 +53,11 @@ text-align: center;
 .blog-p{
 
   font-family: 'Times New Roman', Times, serif;
+}
+
+.navbar {
+
+  background-color: transparent;
 }
 
 
