--- a/src/App.css
+++ b/src/App.css
@@ -497,4 +497,38 @@ text-align: center;
     border-bottom: none;
     padding-left: 5px;
 		display: inline-flex;
-	}
+  }
+  
+  .picContainer {
+    position: relative;
+    width: 100%;
+  }
+  .image-p {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: 0.5s ease;
+    background-color: #28537d;
+  }
+
+  .textWithDeployed a:first-child {
+    margin-right: 5px;
+    border-right: 1px solid white;
+    padding-right: 5px;
+  }
+
+  .frontend {
+      margin-top: 90px;
+      font-family: 'Times New Roman', Times, serif;
+    }
+  
