Fixed Image responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -533,7 +533,7 @@ text-align: center;
     }
 
     .photo {
-      height: 100%;
+      height: auto;
       width: 100%;
     }
     .intro {
@@ -556,4 +556,5 @@ text-align: center;
 
       padding-top: 200px;
     }
+    
   
