--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,28 @@
   text-align: center;
 }
 
+#showcase{
+  background-image:url('./Images/astronomy-1868560.jpg');
+  background-size:cover;
+  background-position:center;
+  height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:0 20px;
+}
+
+#showcase h1{
+  font-size:50px;
+  line-height:1.2;
+}
+
+#showcase p{
+  font-size:20px;
+}
+
 .App-logo {
   height: 40vmin;
 }
@@ -60,7 +82,10 @@ text-align: center;
   background-color: transparent;
 }
 
-
+#parag{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 20px;
+}
 
 .topnav a {
  
@@ -266,6 +291,37 @@ text-align: center;
       text-align: left;
       font-family: 'Times New Roman', Times, serif;
   }
+
+  #button{
+    font-size:18px;
+    text-decoration:none;
+    color: white;
+    border:white 1px solid;
+    padding:10px 20px;
+    border-radius:10px;
+    margin-top:20px;
+  }
+  #buttons{
+    font-size:18px;
+    text-decoration:none;
+    color: white;
+    border:white 1px solid;
+    padding:10px 20px;
+    border-radius:10px;
+    margin-top:20px;
+    background: blue;
+  }
+
+  #button:hover{
+    background: #69bdd2;
+    color:#fff;
+  }
+
+  #buttons:hover{
+    background: #69bdd2;
+    color:#fff;
+  }
+  
   .headers{
 
     font-family: 'Times New Roman', Times, serif;
@@ -275,6 +331,29 @@ text-align: center;
 
     font-family: 'Times New Roman', Times, serif;
     color: white;
+    
+  }
+
+  .navbar-inner {
+    background:transparent;
+}
+
+  #nav{
+    color: white;
+  }
+  .catchy-tag{
+    font-family: 'Times New Roman', Times, serif;
+    font-size:70px;
+    line-height:1.2;
+    padding-top: 200px;
+  }
+
+  .header-p{
+    font-family: 'Times New Roman', Times, serif;
+    line-height:1.2;
+    padding-top: 30px;
+    padding-bottom: 10px;
+
   }
 
   .about-image{
