--- a/src/App.css
+++ b/src/App.css
@@ -123,8 +123,8 @@ text-align: center;
 }
 .centered {
   position: absolute;
-  top: 25%;
-  left: 35%;
+  top: 30%;
+  left: 40%;
   color: white;
   transform: translate(-50%, -50%);
 }
@@ -309,7 +309,7 @@ text-align: center;
     padding:10px 20px;
     border-radius:10px;
     margin-top:20px;
-    background: blue;
+    background: white;
   }
 
   #button:hover{
