update outdated information

--- a/src/App.css
+++ b/src/App.css
@@ -312,6 +312,24 @@ text-align: center;
     background: white;
   }
 
+  #resume {
+    font-size:18px;
+    text-decoration:none;
+    color: white;
+    border:white 1px solid;
+    padding:10px 20px;
+    border-radius:10px;
+    margin-top:20px;
+    background-color: #007bff;
+    position: relative;
+    top: 0;
+    margin-bottom: 20px;
+  }
+
+  #resume:hover {
+    opacity: .6;
+    top: -10px;
+  }
   #button:hover{
     background: #5B3C41;
     color:#fff;
